--- a/rosetta/templates/rosetta/base.html
+++ b/rosetta/templates/rosetta/base.html
@@ -4,6 +4,14 @@
     <title>{% block pagetitle %}Rosetta{% endblock %}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
+    <link rel="stylesheet" type="text/css" href="/static/jet/css/vendor.css?v=1.0.4">
+    <link rel="stylesheet" type="text/css" href="/static/jet/css/icons/style.css?v=1.0.4">
+    <link rel="stylesheet" type="text/css" href="/static/jet/css/themes/default/base.css?v=1.0.4" class="base-stylesheet">
+    <link rel="stylesheet" type="text/css" href="/static/jet/css/themes/default/select2.theme.css?v=1.0.4" class="select2-stylesheet">
+    <link rel="stylesheet" type="text/css" href="/static/admin/css/forms.css">
+    <link rel="stylesheet" type="text/css" href="/static/jet/css/themes/default/jquery-ui.theme.css?v=1.0.4" class="jquery-ui-stylesheet">
+
+
     <link rel="stylesheet" href="{% static "admin/css/base.css" %}" type="text/css"/>
     <link rel="stylesheet" href="{% static "admin/css/forms.css" %}" type="text/css"/>
     <link rel="stylesheet" href="{% static "admin/css/changelists.css" %}" type="text/css"/>
